cloudformation/create-test-server-be-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  TestEnvEC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: "t2.micro"
      KeyName: "vockey" # The key used in the Jenkinsfile credential
      ImageId: "ami-05576a079321f21f8" # Amazon Linux 2 AMI
      SecurityGroupIds:
        - !Ref TestEnvSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y docker
          service docker start
          usermod -a -G docker ec2-user
          amazon-linux-extras enable nginx1
          yum install -y nodejs npm
          curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
          yum install -y mongodb-org
          systemctl start mongod
          systemctl enable mongod

  TestEnvSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable SSH and HTTP access"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "3000"
          ToPort: "3000"
          CidrIp: "0.0.0.0/0"

Outputs:
  PublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt TestEnvEC2Instance.PublicIp

### aws cloudformation create-stack --stack-name mern-deployment-stack --template-body file://create-test-server.yaml-
